[iOS][web] Remove use of CRWWebController in OpenIn

This CL removes the uses of CRWWebController, which is a private class
of web/, and replaces it by WebState.

Bug: 620147
Change-Id: I46fafddaa7d286fb8e5cb44b86642df707a5b20c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1530777
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#642889}
Former-commit-id: 0652012416d9da186310bba415f846a670bbfa7b